# darn-font

./: .gitignore  Darn.sfd  DarnBold.sfd  DarnMedium.sfd  DarnObliqueMedium.sfd  combine.py  ligatures.yml  meson.build
src/18x38/: DarnBold-18x38.bdf  DarnMedium-18x38.bdf
src/6x13/: DarnBold-6x13.bdf  DarnItalic-6x13.bdf  DarnMedium-13.bdf  DarnMedium-6x13.bdf
src/7x15/: DarnBold-15.bdf  DarnBold-7x15.bdf  DarnMedium-15.bdf  DarnMedium-7x15.bdf  DarnObliqueMedium-15.bdf  DarnObliqueMedium-7x15.bdf
src/9x19/: DarnBold-9x19.bdf  DarnMedium-19.bdf  DarnMedium-9x19.bdf
